Fix horizontal scrolling in Gallery component

--- a/src/components/Gallery/gallery.scss
+++ b/src/components/Gallery/gallery.scss
@@ -27,5 +27,6 @@
     display: grid;
     grid-template-columns: repeat(3, 1fr);
     grid-gap: 1rem;
+    overflow: hidden;
   }
 }
